# deepseek-code-agent

./: .env.example  .gitignore  Dockerfile  README.md  bugfix-record_2026-07-15.md  conftest.py  dsc-audit_2026-06-10.md  pyproject.toml  setup.py  start_backend.bat  v1-1-modules_2026-07-15.md
docs/: v2.0-design.md
src/deepseek_agent/: __init__.py  __main__.py
src/deepseek_agent/a2a/: __init__.py
src/deepseek_agent/agent/: __init__.py  context_budget.py  loop.py  parallel.py  tdd_loop.py
src/deepseek_agent/agent/loop/: __init__.py  config.py  error_recovery.py  executor.py  planner.py  stream_handler.py
src/deepseek_agent/core/: __init__.py  client.py  feedback.py  fim.py  model_manager.py  runner.py  sandbox.py  telemetry.py  token_counter.py
src/deepseek_agent/knowledge/: __init__.py  graph.py  ingest.py  parser.py  watcher.py
src/deepseek_agent/mcp/: __init__.py  client.py  protocol.py  server.py
src/deepseek_agent/sdk/: __init__.py
src/deepseek_agent/server/: __init__.py  app.py
src/deepseek_agent/templates/: __init__.py  loader.py  tools.py
src/deepseek_agent/templates/builtin/debug/: bug-fix.md
src/deepseek_agent/templates/builtin/refactor/: refactor-suggest.md
src/deepseek_agent/templates/builtin/review/: code-review.md
src/deepseek_agent/templates/builtin/security/: security-audit.md
src/deepseek_agent/templates/builtin/testing/: test-generator.md
src/deepseek_agent/tools/: __init__.py  arch_check.py  base.py  benchmark.py  debug.py  fs.py  git.py  knowledge.py  lsp.py  mutation.py  pruning.py  refactor.py  registry.py  security.py  security_privacy.py  testing.py  web.py
tests/: test_core.py  test_deepseek_adapt.py  test_loop_modules.py
vscode/: extension.js  package.json
